--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
   <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
 
-  <link rel="canonical" href="http://localhost:4000/omegat-website/about.html">
+  <link rel="canonical" href="http://localhost:4000/omegat-website/about">
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/feed.xml">
   
   
@@ -58,34 +58,34 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Languages<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
-                <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
-                <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
-                <li><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
-                <li><a href="/omegat-website/de/">Deutsch</a></li>
-                <li><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
-                <li><a href="/omegat-website/"   >English</a></li>
-                <li><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
-                <li><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
-                <li><a href="/omegat-website/gl/">Galego</a></li>
-                <li><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
-                <li><a href="/omegat-website/ia/">Interlingua</a></li>
-                <li><a href="/omegat-website/it/">Italiano</a></li>
-                <li><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
-                <li><a href="/omegat-website/hu/">Magyar</a></li>
-                <li><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
-                <li><a href="/omegat-website/nl/">Nederlands</a></li>
-                <li><a href="/omegat-website/pl/">Polski</a></li>
-                <li><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
-                <li><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
-                <li><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
-                <li><a href="/omegat-website/sq/">Shqip</a></li>
-                <li><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
-                <li><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
-                <li><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
-                <li><a href="/omegat-website/fi/">Suomi</a></li>
-                <li><a href="/omegat-website/sv/">Svenska</a></li>
-                <li><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
-                <li><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/ar/about">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li><a href="/omegat-website/ca/about">Catal&#xE0;</a></li>
+                <li><a href="/omegat-website/cz/about">&#x10C;e&#x161;tina</a></li>
+                <li><a href="/omegat-website/de/about">Deutsch</a></li>
+                <li><a href="/omegat-website/el/about">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li><a href="/omegat-website/about">English</a></li>
+                <li><a href="/omegat-website/es/about">Espa&#xF1;ol</a></li>
+                <li><a href="/omegat-website/fr/about">Fran&#xE7;ais</a></li>
+                <li><a href="/omegat-website/gl/about">Galego</a></li>
+                <li><a href="/omegat-website/id/about">Bahasa Indonesia</a></li>
+                <li><a href="/omegat-website/ia/about">Interlingua</a></li>
+                <li><a href="/omegat-website/it/about">Italiano</a></li>
+                <li><a href="/omegat-website/ko/about">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li><a href="/omegat-website/hu/about">Magyar</a></li>
+                <li><a href="/omegat-website/ja/about">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li><a href="/omegat-website/nl/about">Nederlands</a></li>
+                <li><a href="/omegat-website/pl/about">Polski</a></li>
+                <li><a href="/omegat-website/br/about">Portugu&#xEA;s (Brazil)</a></li>
+                <li><a href="/omegat-website/pt/about">Portugu&#xEA;s (Portugal)</a></li>
+                <li><a href="/omegat-website/ru/about">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li><a href="/omegat-website/sq/about">Shqip</a></li>
+                <li><a href="/omegat-website/sk/about">Sloven&#x10D;ina</a></li>
+                <li><a href="/omegat-website/si/about">Sloven&#x161;&#x10D;ina</a></li>
+                <li><a href="/omegat-website/hr/about">Srpskohrvatski</a></li>
+                <li><a href="/omegat-website/fi/about">Suomi</a></li>
+                <li><a href="/omegat-website/sv/about">Svenska</a></li>
+                <li><a href="/omegat-website/zh_CN/about">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/zh_TW/about">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
               </ul>
             </li>
             <!--
