--- a/download.html
+++ b/download.html
@@ -20,7 +20,7 @@
 
   <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
 
-  <link rel="canonical" href="http://localhost:4000/omegat-website/download.html">
+  <link rel="canonical" href="http://localhost:4000/omegat-website/download">
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/feed.xml">
   
   
@@ -58,34 +58,34 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Languages<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
-                <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
-                <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
-                <li><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
-                <li><a href="/omegat-website/de/">Deutsch</a></li>
-                <li><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
-                <li><a href="/omegat-website/"   >English</a></li>
-                <li><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
-                <li><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
-                <li><a href="/omegat-website/gl/">Galego</a></li>
-                <li><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
-                <li><a href="/omegat-website/ia/">Interlingua</a></li>
-                <li><a href="/omegat-website/it/">Italiano</a></li>
-                <li><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
-                <li><a href="/omegat-website/hu/">Magyar</a></li>
-                <li><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
-                <li><a href="/omegat-website/nl/">Nederlands</a></li>
-                <li><a href="/omegat-website/pl/">Polski</a></li>
-                <li><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
-                <li><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
-                <li><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
-                <li><a href="/omegat-website/sq/">Shqip</a></li>
-                <li><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
-                <li><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
-                <li><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
-                <li><a href="/omegat-website/fi/">Suomi</a></li>
-                <li><a href="/omegat-website/sv/">Svenska</a></li>
-                <li><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
-                <li><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/ar/download">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li><a href="/omegat-website/ca/download">Catal&#xE0;</a></li>
+                <li><a href="/omegat-website/cz/download">&#x10C;e&#x161;tina</a></li>
+                <li><a href="/omegat-website/de/download">Deutsch</a></li>
+                <li><a href="/omegat-website/el/download">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li><a href="/omegat-website/download">English</a></li>
+                <li><a href="/omegat-website/es/download">Espa&#xF1;ol</a></li>
+                <li><a href="/omegat-website/fr/download">Fran&#xE7;ais</a></li>
+                <li><a href="/omegat-website/gl/download">Galego</a></li>
+                <li><a href="/omegat-website/id/download">Bahasa Indonesia</a></li>
+                <li><a href="/omegat-website/ia/download">Interlingua</a></li>
+                <li><a href="/omegat-website/it/download">Italiano</a></li>
+                <li><a href="/omegat-website/ko/download">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li><a href="/omegat-website/hu/download">Magyar</a></li>
+                <li><a href="/omegat-website/ja/download">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li><a href="/omegat-website/nl/download">Nederlands</a></li>
+                <li><a href="/omegat-website/pl/download">Polski</a></li>
+                <li><a href="/omegat-website/br/download">Portugu&#xEA;s (Brazil)</a></li>
+                <li><a href="/omegat-website/pt/download">Portugu&#xEA;s (Portugal)</a></li>
+                <li><a href="/omegat-website/ru/download">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li><a href="/omegat-website/sq/download">Shqip</a></li>
+                <li><a href="/omegat-website/sk/download">Sloven&#x10D;ina</a></li>
+                <li><a href="/omegat-website/si/download">Sloven&#x161;&#x10D;ina</a></li>
+                <li><a href="/omegat-website/hr/download">Srpskohrvatski</a></li>
+                <li><a href="/omegat-website/fi/download">Suomi</a></li>
+                <li><a href="/omegat-website/sv/download">Svenska</a></li>
+                <li><a href="/omegat-website/zh_CN/download">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/zh_TW/download">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
               </ul>
             </li>
             <!--
