--- a/fr/dl_overview.html
+++ b/fr/dl_overview.html
@@ -20,7 +20,7 @@
 
   <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
 
-  <link rel="canonical" href="http://localhost:4000/omegat-website/fr/dl_overview.html">
+  <link rel="canonical" href="http://localhost:4000/omegat-website/fr/dl_overview">
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/fr/feed.xml">
   
   
@@ -58,34 +58,34 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Langues<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
-                <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
-                <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
-                <li><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
-                <li><a href="/omegat-website/de/">Deutsch</a></li>
-                <li><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
-                <li><a href="/omegat-website/"   >English</a></li>
-                <li><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
-                <li><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
-                <li><a href="/omegat-website/gl/">Galego</a></li>
-                <li><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
-                <li><a href="/omegat-website/ia/">Interlingua</a></li>
-                <li><a href="/omegat-website/it/">Italiano</a></li>
-                <li><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
-                <li><a href="/omegat-website/hu/">Magyar</a></li>
-                <li><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
-                <li><a href="/omegat-website/nl/">Nederlands</a></li>
-                <li><a href="/omegat-website/pl/">Polski</a></li>
-                <li><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
-                <li><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
-                <li><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
-                <li><a href="/omegat-website/sq/">Shqip</a></li>
-                <li><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
-                <li><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
-                <li><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
-                <li><a href="/omegat-website/fi/">Suomi</a></li>
-                <li><a href="/omegat-website/sv/">Svenska</a></li>
-                <li><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
-                <li><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/ar/dl_overview">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li><a href="/omegat-website/ca/dl_overview">Catal&#xE0;</a></li>
+                <li><a href="/omegat-website/cz/dl_overview">&#x10C;e&#x161;tina</a></li>
+                <li><a href="/omegat-website/de/dl_overview">Deutsch</a></li>
+                <li><a href="/omegat-website/el/dl_overview">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li><a href="/omegat-website/dl_overview">English</a></li>
+                <li><a href="/omegat-website/es/dl_overview">Espa&#xF1;ol</a></li>
+                <li><a href="/omegat-website/fr/dl_overview">Fran&#xE7;ais</a></li>
+                <li><a href="/omegat-website/gl/dl_overview">Galego</a></li>
+                <li><a href="/omegat-website/id/dl_overview">Bahasa Indonesia</a></li>
+                <li><a href="/omegat-website/ia/dl_overview">Interlingua</a></li>
+                <li><a href="/omegat-website/it/dl_overview">Italiano</a></li>
+                <li><a href="/omegat-website/ko/dl_overview">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li><a href="/omegat-website/hu/dl_overview">Magyar</a></li>
+                <li><a href="/omegat-website/ja/dl_overview">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li><a href="/omegat-website/nl/dl_overview">Nederlands</a></li>
+                <li><a href="/omegat-website/pl/dl_overview">Polski</a></li>
+                <li><a href="/omegat-website/br/dl_overview">Portugu&#xEA;s (Brazil)</a></li>
+                <li><a href="/omegat-website/pt/dl_overview">Portugu&#xEA;s (Portugal)</a></li>
+                <li><a href="/omegat-website/ru/dl_overview">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li><a href="/omegat-website/sq/dl_overview">Shqip</a></li>
+                <li><a href="/omegat-website/sk/dl_overview">Sloven&#x10D;ina</a></li>
+                <li><a href="/omegat-website/si/dl_overview">Sloven&#x161;&#x10D;ina</a></li>
+                <li><a href="/omegat-website/hr/dl_overview">Srpskohrvatski</a></li>
+                <li><a href="/omegat-website/fi/dl_overview">Suomi</a></li>
+                <li><a href="/omegat-website/sv/dl_overview">Svenska</a></li>
+                <li><a href="/omegat-website/zh_CN/dl_overview">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li><a href="/omegat-website/zh_TW/dl_overview">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
               </ul>
             </li>
             <!--
